Updated to use IntComputerContext